package com.devsenior.hotelsystem.model;

public enum EstadoReserva {

    PENDIENTE,
    CONFIRMADA,
    CANCELADA,
    COMPLETADA
}
