package com.devsenior.hotelsystem.model;

public enum TipoHabitacion {
    SIMPLE,
    DOBLE,
    SUITE
}
